--- a/css/main.css
+++ b/css/main.css
@@ -283,7 +283,7 @@ input:focus {
 
 /* line 103, scss/_buttons.scss */
 .button-back-lecture-response {
-  background-color: #5dc43b;
+  background-color: #6eca4f;
   width: 120px;
   height: 50px;
   display: inline-block;
@@ -297,7 +297,7 @@ input:focus {
 }
 /* line 117, scss/_buttons.scss */
 .button-back-lecture-response:hover {
-  background-color: #418a29;
+  background-color: #5dc43b;
 }
 
 /* line 122, scss/_buttons.scss */
